--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   table_calendar: ^3.1.2
   image_picker: ^1.1.2
   shared_preferences: ^2.3.3
+  dio: ^5.7.0
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
+  path_provider: ^2.1.5
+
 
 dev_dependencies:
   flutter_test:
