--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
   path_provider: ^2.1.5
+  http_parser: ^4.0.2
 
 
 dev_dependencies:
