--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   path_provider: ^2.1.5
   http_parser: ^4.0.2
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
