--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,18 +41,20 @@ dependencies:
   carousel_slider: ^5.0.0
   intl: ^0.19.0
   table_calendar: ^3.1.2
-  image_picker: ^1.1.2
-  shared_preferences: ^2.3.3
+  image_picker: ^0.8.7
+  shared_preferences: ^2.2.0
   dio: ^5.7.0
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
-  path_provider: ^2.1.5
+  path_provider: ^2.0.12
   http_parser: ^4.0.2
   flutter_rating_bar: ^4.0.1
   razorpay_flutter: ^1.3.7
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
-  cached_network_image: ^3.4.1
+  cached_network_image: ^3.3.1
+  file_picker: ^5.4.2
+
 
 
 dev_dependencies:
@@ -64,7 +66,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
